# screenc.me

./: .gitignore  README.md  SCREENCONNECT.sln  azure-pipelines-frontend.yml  azure-pipelines-webapp.yml  test-exe-download.ps1
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  script.js  staticwebapp.config.json  style.css
webapp/: Dockerfile  Program.cs  README.md  ScreenConnect.WebApp.csproj
webapp/Controllers/: HealthController.cs  SessionController.cs
webapp/Models/: SessionModels.cs
webapp/SelfExtractorRust/: .gitignore  Cargo.toml  README.md  build.rs  manifest.xml
webapp/SelfExtractorRust/src/: main.rs
webapp/Services/: ScreenConnectService.cs  SelfExtractorService.cs
